everything but song selection

--- a/WakeUP/Info.plist
+++ b/WakeUP/Info.plist
@@ -80,5 +80,7 @@ coordinates for your location.</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key></key>
+	<string></string>
 </dict>
 </plist>
